--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -44,17 +44,11 @@ DOCTYPE html>
     </main>
 
     <footer>
-        <p>&copy; 2024 <a href="mrariyanhaque.github.io>Ariyan Haque</a>. All rights reserved.</p>
+        <p>&copy; 2024 <a href="https://mrariyahaque.github.io" target="_blank">Ariyan Haque</a>. All rights reserved.</p>
     </footer>
 
     <!-- Google Analytics (Track Visitors) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXXX-X"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-XXXXXXX-X');
-    </script>
+    
 
 </body>
 </html>
