--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <main>
         <section class="profile-section">
-            <img src="fa8cc9cf-3a5a-4a25-913a-e40b23e1541b.jpeg" alt="Ariyan Haque Profile Image" class="profile-image">
+            <img src="IMG_0116.jpeg" alt="Ariyan Haque Profile Image" class="profile-image">
             <div class="profile-details">
                 <p><strong>Name:</strong> Eshan Ali</p>
                 <p><strong>Date of Birth:</strong> 01 July 2010</p>
